--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 # Astro Runtime includes the following pre-installed providers packages: https://docs.astronomer.io/astro/runtime-image-architecture#provider-packages
 apache-airflow-providers-google==10.1.1
+apache-airflow-providers-slack==7.3.0
